0.83.13
  - Fixed MOUNT and IMGMOUNT commands unable to mount
    directories or image files that contain non-ASCII
    characters in the code page on Windows. (Wengier)
  - Debugger "DOS XMS" command will only list handles
    that are allocated, or with nonzero address or
    nonzero size, to avoid showing irrelevant
    information. (joncampbell123)
  - Added LOADFIX -EMS option to allocate/free
    EMS (expanded memory). (joncampbell123)
  - LOADFIX -D -XMS will free all XMS blocks
    allocated by LOADFIX -XMS. (joncampbell123)
  - LOADFIX -A will not allocate memory unless there
    is memory below 64KB to fill. (joncampbell123)
  - INT 15h PS/2 mouse functions now clear pending
    PS/2 mouse interrupt as part of the BIOS call.
    This should resolve unresponsive mouse issues
    with Windows 3.1. (joncampbell123)
  - Updated FLAC decoder library to the latest version
    (0.12.29 by David Reid). (Wengier)
0.83.12
  - Tandy graphics emulation fixed to accept 8 bits
    for vertical total and vertical display CRTC
    registers, which is needed for the tweaked
    graphics mode used by Math Rabbit to display
    correctly.
  - INT 10h will no longer fill in three fields in
    the BIOS data area (video CTL, char height, and
    video switches) unless the machine type is
    EGA or VGA. Those fields do not exist otherwise.
    Certain games like Mindscape's "Road Runner" game
    require those fields to be zero as part of it's
    Tandy detection routine.
  - PCjr mode will omit the reserved graphics RAM
    MCB block, and will subtract 16KB from the top
    at the BIOS level, if emulating 128KB system
    memory or less.
  - You can now run PCjr mode with as little as
    128KB of RAM. Removed 256KB minimum check from
    DOS kernel. Certain games (Mickey's Space
    Adventure) require memsizekb=128 and memsize=0
    in PCjr mode or else it will not work correctly
    due to how the game locates video system memory.